# irc_client

./: .gitignore  CMakeLists.txt  ChannelModel.cpp  ConfigManager.cpp  ConfigManager.hpp  IrcConnection.hpp  IrcNumericHandler.cpp  IrcNumericHandler.hpp  MainWindow.cpp  MessageParser.cpp  MessageParser.hpp  README.md  UserModel.hpp
include/: ChannelModel.hpp  CommandHandler.hpp  ConfigManager.hpp  DccHandler.hpp  IrcConnection.hpp  MainWindow.hpp  MessageParser.hpp
src/: CommandHandler.cpp  ConfigManager.cpp  DccHandler.cpp  IrcConnection.cpp  IrcNumericHandler.cpp  MainWindow.cpp  MessageParser.cpp  UserModel.cpp  main.cpp
tests/: TestCommandHandler.cpp  TestCommandHandler.hpp  TestConfigManager.cpp  TestConfigManager.hpp  TestMessageParser.cpp  TestMessageParser.hpp  main.cpp
